Fix: dropdown z-index

--- a/assets/scss/layout/_header-delivery.scss
+++ b/assets/scss/layout/_header-delivery.scss
@@ -1,7 +1,7 @@
 .header-delivery {
     height: 350px;
     background: $aqua;
-    z-index: 40;
+    // z-index: 40;
 
     @include respond(mobile) {
         height: 520px;
